@@ -119,6 +119,17 @@
 		  </child>
 
 		  <child>
+		    <widget class="GtkMenuItem" id="submit">
+		      <property name="visible">True</property>
+		      <property name="sensitive">False</property>
+		      <property name="label" translatable="yes">_Submit ...</property>
+		      <property name="use_underline">True</property>
+		      <signal name="activate" handler="on_submit_activate" last_modification_time="Wed, 18 Jun 2003 16:06:41 GMT"/>
+		      <accelerator key="S" modifiers="GDK_CONTROL_MASK" signal="activate"/>
+		    </widget>
+		  </child>
+
+		  <child>
 		    <widget class="GtkSeparatorMenuItem" id="separatormenuitem1">
 		      <property name="visible">True</property>
 		    </widget>
@@ -1013,7 +1024,6 @@
 			  <property name="active">False</property>
 			  <property name="inconsistent">False</property>
 			  <property name="draw_indicator">True</property>
-			  <signal name="toggled" handler="prefs_eject_toggled" last_modification_time="Wed, 12 Nov 2003 18:59:48 GMT"/>
 			</widget>
 			<packing>
 			  <property name="left_attach">0</property>
@@ -1287,7 +1297,6 @@
 			  <property name="active">False</property>
 			  <property name="inconsistent">False</property>
 			  <property name="draw_indicator">True</property>
-			  <signal name="toggled" handler="prefs_strip_toggled" last_modification_time="Fri, 25 Apr 2003 08:29:02 GMT"/>
 			</widget>
 			<packing>
 			  <property name="left_attach">0</property>
