@@ -1,3 +1,13 @@
+2006-01-07  Ross Burton  <ross@burtonini.com>
+
+	* data/sound-juicer.glade:
+	* src/sj-main.c:
+	* src/sj-metadata.c:
+	* src/sj-metadata.h:
+	* src/sj-metadata-musicbrainz.c:
+	Add a Submit button to open the relevant MusicBrainz page (James
+	Hensbridge, #112889).
+
 2006-01-07  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>
 
 	* configure.in: Added "zh_HK" to ALL_LINGUAS.
